--- a/source/Novicell.Examine.Solr.Tests/Novicell.Examine.Solr.Tests.csproj
+++ b/source/Novicell.Examine.Solr.Tests/Novicell.Examine.Solr.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
-            Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="..\packages\NUnit.3.12.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" />
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -33,16 +33,64 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="Examine, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\Examine.1.0.3\lib\net452\Examine.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
+          <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="Lucene.Net, Version=3.0.3.0, Culture=neutral, PublicKeyToken=85089178b9ac3181">
+          <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
+          <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Class1.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Index\SolRIndexTests.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="TestBaseIndex.cs" />
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <ItemGroup>
+      <Content Include="App.config" />
+      <Content Include="App_Data\media.xml" />
+      <Content Include="App_Data\PDFStandards.PDF" />
+      <Content Include="App_Data\StringTheory.pdf" />
+      <Content Include="App_Data\TemplateIndex\segments.gen" />
+      <Content Include="App_Data\TemplateIndex\segments_2" />
+      <Content Include="App_Data\TemplateIndex\_0.cfs" />
+      <Content Include="App_Data\umbraco.config" />
+      <Content Include="App_Data\UmbracoContour.pdf" />
+      <Content Include="App_Data\VS2010CSharp.pdf" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Novicell.Examine.Solr\Novicell.Examine.Solr.csproj">
+        <Project>{38e63c7d-d014-4760-a188-98669a4b52b1}</Project>
+        <Name>Novicell.Examine.Solr</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\TestsSharedCode\TestsSharedCode.csproj">
+        <Project>{4958ed9c-2b2f-4086-a07e-df7db3029a5a}</Project>
+        <Name>TestsSharedCode</Name>
+      </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
+    </ItemGroup>
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+      <PropertyGroup>
+        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+      </PropertyGroup>
+      <Error Condition="!Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.12.0\build\NUnit.props'))" />
+    </Target>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
