--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
@@ -1,18 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="8.0.0" targetFramework="net472" />
-  <package id="ClientDependency" version="1.9.8" targetFramework="net472" />
-  <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
-  <package id="ElasticsearchInside" version="7.1.2" targetFramework="net472" />
-  <package id="Examine" version="1.0.5" targetFramework="net472" />
+  <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
+  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net472" />
+  <package id="Examine" version="1.0.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Legacy" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="LightInject" version="5.4.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
   <package id="LightInject.Mvc" version="2.0.0" targetFramework="net472" />
@@ -39,10 +32,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MiniProfiler" version="4.0.138" targetFramework="net472" />
   <package id="MiniProfiler.Shared" version="4.0.138" targetFramework="net472" />
-  <package id="NEST" version="7.5.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="NPoco" version="3.9.4" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="PDFsharpNetStandard2" version="1.51.4845" targetFramework="net472" />
   <package id="Semver" version="2.0.4" targetFramework="net472" />
   <package id="Serilog" version="2.8.0" targetFramework="net472" />
   <package id="Serilog.Enrichers.Process" version="2.0.1" targetFramework="net472" />
@@ -56,11 +49,12 @@
   <package id="Serilog.Sinks.Map" version="1.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
   <package id="Superpower" version="2.0.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.1.0" targetFramework="net472" />
+  <package id="UmbracoCms.UmbracoExamine.PDF" version="2.0.2" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.1.0" targetFramework="net472" />
 </packages>
