--- a/source/Novicell.Examine.ElasticSearch.Umbraco/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClientDependency" version="1.9.8" targetFramework="net472" />
+  <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.8.0" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.8.0" targetFramework="net472" />
+  <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
-  <package id="Examine" version="1.0.1" targetFramework="net472" />
+  <package id="Examine" version="1.0.5" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
+  <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
   <package id="ImageProcessor" version="2.8.0" targetFramework="net472" />
   <package id="LightInject" version="5.5.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
@@ -58,6 +62,4 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.11.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.5.3" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.5.3" targetFramework="net472" />
 </packages>
