--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/Novicell.Examine.ElasticSearch.Umbraco.PDF.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/Novicell.Examine.ElasticSearch.Umbraco.PDF.csproj
@@ -317,6 +317,9 @@
         <Name>Novicell.Examine.ElasticSearch</Name>
       </ProjectReference>
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="_nuget\package.nuspec" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets" Condition="Exists('..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets')" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
