--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/_nuget/package.nuspec
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/_nuget/package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Novicell.Examine.ElasticSearch.Umbraco.Pdf</id>
-    <version>1.0.0-alpha-000105</version>
+    <version></version>
     <title>Novicell.Examine.ElasticSearch.Umbraco.Pdf</title>
     <authors>Arkadiusz Biel</authors>
     <owners>Novicell,Arkadiusz Biel</owners>
@@ -16,9 +16,7 @@
     <language>en-GB</language>
     <tags>Umbraco, Novicell,Examine,ElasticSearch, Umbraco PDF</tags>
     <dependencies>
-      <dependency id="NEST" version="7.4.1" />
-      <dependency id="Elasticsearch.Net" version="7.4.1" />
-      <dependency id="Elasticsearch.Net" version="[1.0.0-alpha, 2.0.0)" />
+      <dependency id="Novicell.Examine.ElasticSearch.Umbraco" version="[1.0.0-alpha, 2.0.0)" />
     </dependencies>
   </metadata>
 </package>
