--- a/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
+++ b/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
@@ -348,6 +348,9 @@
     <Compile Include="Queries\ElasticSearchQuery.cs" />
     <Compile Include="Queries\LateBoundQuery.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="_nuget\package.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
  
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
