--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/Novicell.Examine.ElasticSearch.Umbraco.PDF.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/Novicell.Examine.ElasticSearch.Umbraco.PDF.csproj
@@ -32,24 +32,32 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="AngleSharp, Version=0.9.9.0, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea">
+          <HintPath>..\packages\AngleSharp.0.9.11\lib\net45\AngleSharp.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="ClientDependency.Core, Version=1.9.9.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\packages\ClientDependency.1.9.9\lib\net45\ClientDependency.Core.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="ClientDependency.Core.Mvc, Version=1.8.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\ClientDependency-Mvc5.1.8.0.0\lib\net45\ClientDependency.Core.Mvc.dll</HintPath>
+        <Reference Include="ClientDependency.Core.Mvc, Version=1.9.3.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\ClientDependency-Mvc5.1.9.3\lib\net45\ClientDependency.Core.Mvc.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="CSharpTest.Net.Collections, Version=14.906.1403.1082, Culture=neutral, PublicKeyToken=06aee00cce822474">
           <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Examine, Version=1.0.1.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\Examine.1.0.1\lib\net452\Examine.dll</HintPath>
+        <Reference Include="Examine, Version=1.0.5.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\Examine.1.0.5\lib\net452\Examine.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="HtmlAgilityPack, Version=1.8.14.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a">
           <HintPath>..\packages\HtmlAgilityPack.1.8.14\lib\Net45\HtmlAgilityPack.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="HtmlSanitizer, Version=4.0.0.0, Culture=neutral, PublicKeyToken=61c49a1a9e79cc28">
+          <HintPath>..\packages\HtmlSanitizer.4.0.217\lib\net45\HtmlSanitizer.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
@@ -282,19 +290,23 @@
         </Reference>
         <Reference Include="System.Xml" />
         <Reference Include="Umbraco.Core, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Core.8.1.0\lib\net472\Umbraco.Core.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Core.8.9.0\lib\net472\Umbraco.Core.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Examine, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.1.0\lib\net472\Umbraco.Examine.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.9.0\lib\net472\Umbraco.Examine.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="Umbraco.ModelsBuilder.Embedded, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\UmbracoCms.Web.8.9.0\lib\net472\Umbraco.ModelsBuilder.Embedded.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.1.0\lib\net472\Umbraco.Web.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.9.0\lib\net472\Umbraco.Web.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Web.UI, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.1.0\lib\net472\Umbraco.Web.UI.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.9.0\lib\net472\Umbraco.Web.UI.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="UmbracoExamine.PDF, Version=0.8.7153.30865, Culture=neutral, PublicKeyToken=null">
