--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.9.0" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.9.0" targetFramework="net472" />
+  <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
-  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net472" />
-  <package id="Examine" version="1.0.1" targetFramework="net472" />
+  <package id="Examine" version="1.0.5" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
+  <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net472" />
   <package id="LightInject" version="5.4.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
@@ -54,7 +58,5 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.1.0" targetFramework="net472" />
   <package id="UmbracoCms.UmbracoExamine.PDF" version="2.0.2" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.1.0" targetFramework="net472" />
 </packages>
