--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
+  <package id="UmbracoCms.UmbracoExamine.PDF" version="2.1.0" targetFramework="net472" />
+  <package id="PdfPig" version="0.1.3" targetFramework="net472" />
   <package id="UmbracoCms.Core" version="8.9.0" targetFramework="net472" />
   <package id="UmbracoCms.Web" version="8.9.0" targetFramework="net472" />
   <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
@@ -58,5 +60,4 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.UmbracoExamine.PDF" version="2.0.2" targetFramework="net472" />
 </packages>
