--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/_nuget/package.nuspec
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/_nuget/package.nuspec
@@ -17,7 +17,7 @@
     <tags>Umbraco, Novicell,Examine,ElasticSearch, Umbraco PDF</tags>
     <dependencies>
       <dependency id="Novicell.Examine.ElasticSearch.Umbraco" version="[1.0.0-alpha, 2.0.0)" />
-      <dependency id="UmbracoForms.Core" version="[8.0.0, 9.0.0)" />
+      <dependency id="UmbracoCms.UmbracoExamine.PDF" version="[2.0.0, 3.0.0)" />
     </dependencies>
   </metadata>
 </package>
