--- a/source/Novicell.Examine.ElasticSearch.Umbraco/_nuget/package.nuspec
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco/_nuget/package.nuspec
@@ -19,4 +19,7 @@
       <dependency id="Novicell.Examine.ElasticSearch" version="[1.0.0-alpha, 2.0.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\bin\Release\Novicell.Examine.ElasticSearch.Umbraco.dll" target="lib\net45" />
+  </files>
 </package>
