--- a/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/_nuget/package.nuspec
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/_nuget/package.nuspec
@@ -20,4 +20,7 @@
       <dependency id="UmbracoForms.Core" version="[8.0.0, 9.0.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\bin\Release\Novicell.Examine.ElasticSearch.Umbraco.Forms.dll" target="lib\net45" />
+  </files>
 </package>
