--- a/source/Novicell.Examine.ElasticSearch/_nuget/package.nuspec
+++ b/source/Novicell.Examine.ElasticSearch/_nuget/package.nuspec
@@ -20,4 +20,7 @@
       <dependency id="Elasticsearch.Net" version="7.4.1" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\bin\Release\Novicell.Examine.ElasticSearch.dll" target="lib\net45" />
+  </files>
 </package>
