--- a/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/Novicell.Examine.ElasticSearch.Umbraco.Forms.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/Novicell.Examine.ElasticSearch.Umbraco.Forms.csproj
@@ -52,8 +52,8 @@
           <HintPath>..\packages\EPPlus.4.5.3.2\lib\net40\EPPlus.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Examine, Version=1.0.5.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\Examine.1.0.5\lib\net452\Examine.dll</HintPath>
+        <Reference Include="Examine, Version=1.2.2.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\Examine.1.2.2\lib\net452\Examine.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="HtmlAgilityPack, Version=1.8.14.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a">
@@ -68,8 +68,12 @@
           <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="ImageProcessor, Version=2.7.0.100, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\ImageProcessor.2.7.0.100\lib\net452\ImageProcessor.dll</HintPath>
+        <Reference Include="ImageProcessor, Version=2.9.1.225, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\ImageProcessor.2.9.1\lib\net452\ImageProcessor.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="K4os.Compression.LZ4, Version=1.2.12.0, Culture=neutral, PublicKeyToken=2186fa9121ef231d">
+          <HintPath>..\packages\K4os.Compression.LZ4.1.2.12\lib\net46\K4os.Compression.LZ4.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="LightInject, Version=5.4.0.0, Culture=neutral, PublicKeyToken=null">
@@ -100,6 +104,14 @@
           <HintPath>..\packages\Markdown.2.2.1\lib\net451\Markdown.dll</HintPath>
           <Private>True</Private>
         </Reference>
+        <Reference Include="MessagePack, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b4a0369545f0a1be">
+          <HintPath>..\packages\MessagePack.2.3.75\lib\netstandard2.0\MessagePack.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="MessagePack.Annotations, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b4a0369545f0a1be">
+          <HintPath>..\packages\MessagePack.Annotations.2.3.75\lib\netstandard2.0\MessagePack.Annotations.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
           <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.2\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
           <Private>True</Private>
@@ -110,6 +122,10 @@
         </Reference>
         <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
           <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.4.0\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.1\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Microsoft.CSharp" />
@@ -168,50 +184,58 @@
           <Private>True</Private>
         </Reference>
         <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.2.8.0\lib\net46\Serilog.dll</HintPath>
+          <HintPath>..\packages\Serilog.2.11.0-dev-01367\lib\net46\Serilog.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Serilog.Enrichers.Process, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Enrichers.Process.2.0.1\lib\net45\Serilog.Enrichers.Process.dll</HintPath>
+          <HintPath>..\packages\Serilog.Enrichers.Process.2.0.2\lib\net45\Serilog.Enrichers.Process.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Serilog.Enrichers.Thread, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Enrichers.Thread.3.0.0\lib\net45\Serilog.Enrichers.Thread.dll</HintPath>
+          <HintPath>..\packages\Serilog.Enrichers.Thread.3.2.0-dev-00752\lib\net45\Serilog.Enrichers.Thread.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Serilog.Filters.Expressions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Filters.Expressions.2.0.0\lib\net45\Serilog.Filters.Expressions.dll</HintPath>
+        <Reference Include="Serilog.Filters.Expressions, Version=2.1.1.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+          <HintPath>..\packages\Serilog.Filters.Expressions.2.1.1-dev-00054\lib\net45\Serilog.Filters.Expressions.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Serilog.Formatting.Compact, Version=1.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Formatting.Compact.1.0.0\lib\net45\Serilog.Formatting.Compact.dll</HintPath>
+        <Reference Include="Serilog.Formatting.Compact, Version=1.1.1.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+          <HintPath>..\packages\Serilog.Formatting.Compact.1.1.1-dev-00944\lib\net452\Serilog.Formatting.Compact.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Serilog.Formatting.Compact.Reader, Version=1.0.3.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Formatting.Compact.Reader.1.0.3\lib\net45\Serilog.Formatting.Compact.Reader.dll</HintPath>
+        <Reference Include="Serilog.Formatting.Compact.Reader, Version=1.0.5.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+          <HintPath>..\packages\Serilog.Formatting.Compact.Reader.1.0.5\lib\net45\Serilog.Formatting.Compact.Reader.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Serilog.Settings.AppSettings, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
           <HintPath>..\packages\Serilog.Settings.AppSettings.2.2.2\lib\net45\Serilog.Settings.AppSettings.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Serilog.Sinks.Async, Version=1.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Sinks.Async.1.3.0\lib\net45\Serilog.Sinks.Async.dll</HintPath>
+        <Reference Include="Serilog.Sinks.Async, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+          <HintPath>..\packages\Serilog.Sinks.Async.1.5.0\lib\net461\Serilog.Sinks.Async.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Serilog.Sinks.File, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Sinks.File.4.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+          <HintPath>..\packages\Serilog.Sinks.File.4.1.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Serilog.Sinks.Map, Version=1.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
-          <HintPath>..\packages\Serilog.Sinks.Map.1.0.0\lib\netstandard2.0\Serilog.Sinks.Map.dll</HintPath>
+        <Reference Include="Serilog.Sinks.Map, Version=1.0.2.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+          <HintPath>..\packages\Serilog.Sinks.Map.1.0.2\lib\netstandard2.0\Serilog.Sinks.Map.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Superpower, Version=1.0.0.0, Culture=neutral, PublicKeyToken=aec39280ded1b3a7">
-          <HintPath>..\packages\Superpower.2.0.0\lib\net45\Superpower.dll</HintPath>
+          <HintPath>..\packages\Superpower.2.3.1-dev-00184\lib\net45\Superpower.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="System" />
+        <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Collections.Immutable, Version=1.2.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Collections.Immutable.1.7.1\lib\net461\System.Collections.Immutable.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.configuration" />
         <Reference Include="System.Core" />
@@ -232,18 +256,39 @@
         <Reference Include="System.Drawing" />
         <Reference Include="System.IO" />
         <Reference Include="System.Linq.Expressions" />
+        <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Net.Http" />
         <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
           <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
           <Private>True</Private>
         </Reference>
+        <Reference Include="System.Numerics" />
+        <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Runtime" />
         <Reference Include="System.Runtime.Caching" />
+        <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Runtime.Serialization" />
         <Reference Include="System.Security" />
+        <Reference Include="System.Text.Encoding.CodePages, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Text.Encoding.CodePages.4.7.1\lib\net461\System.Text.Encoding.CodePages.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Threading.Tasks" />
         <Reference Include="System.Threading.Tasks.Dataflow, Version=4.6.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
           <HintPath>..\packages\System.Threading.Tasks.Dataflow.4.9.0\lib\netstandard2.0\System.Threading.Tasks.Dataflow.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="System.Transactions" />
@@ -287,11 +332,11 @@
         </Reference>
         <Reference Include="System.Xml" />
         <Reference Include="Umbraco.Core, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Core.8.11.1\lib\net472\Umbraco.Core.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Core.8.16.0\lib\net472\Umbraco.Core.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Examine, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.11.1\lib\net472\Umbraco.Examine.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.16.0\lib\net472\Umbraco.Examine.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Forms.Core, Version=8.5.4.0, Culture=neutral, PublicKeyToken=null">
@@ -311,15 +356,15 @@
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.ModelsBuilder.Embedded, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.11.1\lib\net472\Umbraco.ModelsBuilder.Embedded.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.16.0\lib\net472\Umbraco.ModelsBuilder.Embedded.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.11.1\lib\net472\Umbraco.Web.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.16.0\lib\net472\Umbraco.Web.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Umbraco.Web.UI, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\UmbracoCms.Web.8.11.1\lib\net472\Umbraco.Web.UI.dll</HintPath>
+          <HintPath>..\packages\UmbracoCms.Web.8.16.0\lib\net472\Umbraco.Web.UI.dll</HintPath>
           <Private>True</Private>
         </Reference>
     </ItemGroup>
