--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
@@ -1,17 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.16.0" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.16.0" targetFramework="net472" />
+  <package id="Examine" version="1.2.2" targetFramework="net472" />
+  <package id="ImageProcessor" version="2.9.1" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.12" targetFramework="net472" />
+  <package id="MessagePack" version="2.3.75" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Serilog" version="2.11.0-dev-01367" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Process" version="2.0.2" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Thread" version="3.2.0-dev-00752" targetFramework="net472" />
+  <package id="Serilog.Filters.Expressions" version="2.1.1-dev-00054" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact" version="1.1.1-dev-00944" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact.Reader" version="1.0.5" targetFramework="net472" />
+  <package id="Serilog.Sinks.Async" version="1.5.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Map" version="1.0.2" targetFramework="net472" />
+  <package id="Superpower" version="2.3.1-dev-00184" targetFramework="net472" />
+  <package id="MessagePack.Annotations" version="2.3.75" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="UmbracoCms.UmbracoExamine.PDF" version="2.1.0" targetFramework="net472" />
   <package id="PdfPig" version="0.1.3" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.11.1" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.11.1" targetFramework="net472" />
   <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
-  <package id="Examine" version="1.0.5" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
-  <package id="ImageProcessor" version="2.7.0.100" targetFramework="net472" />
   <package id="LightInject" version="5.4.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
   <package id="LightInject.Mvc" version="2.0.0" targetFramework="net472" />
@@ -43,18 +66,8 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PDFsharpNetStandard2" version="1.51.4845" targetFramework="net472" />
   <package id="Semver" version="2.0.4" targetFramework="net472" />
-  <package id="Serilog" version="2.8.0" targetFramework="net472" />
-  <package id="Serilog.Enrichers.Process" version="2.0.1" targetFramework="net472" />
-  <package id="Serilog.Enrichers.Thread" version="3.0.0" targetFramework="net472" />
-  <package id="Serilog.Filters.Expressions" version="2.0.0" targetFramework="net472" />
-  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net472" />
-  <package id="Serilog.Formatting.Compact.Reader" version="1.0.3" targetFramework="net472" />
   <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net472" />
-  <package id="Serilog.Sinks.Async" version="1.3.0" targetFramework="net472" />
-  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
-  <package id="Serilog.Sinks.Map" version="1.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
-  <package id="Superpower" version="2.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
