--- a/source/Novicell.Examine.ElasticSearch.Umbraco.TestProject/config/umbracoSettings.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.TestProject/config/umbracoSettings.config
@@ -1,19 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <settings>
-
   <!--
     umbracoSettings.config configuration documentation can be found here:
     https://our.umbraco.com/documentation/using-umbraco/config-files/umbracoSettings/
     Many of the optional settings are not explicitly listed here
     but can be found in the online documentation.
     -->
-
-    <backOffice id="0fd175da-835c-4c78-ae18-a436c68717c5">
-        <tours enable="true"></tours>
-    </backOffice>
-
+  <backOffice id="0fd175da-835c-4c78-ae18-a436c68717c5">
+    <tours enable="true">
+    </tours>
+  </backOffice>
   <content>
-
     <errors>
       <error404>1</error404>
       <!--
@@ -29,16 +26,13 @@
         </error404>
        -->
     </errors>
-
     <notifications>
       <!-- the email that should be used as from mail when umbraco sends a notification -->
       <!-- you can add a display name to the email like this: <email>Your display name here &lt;your@email.here&gt;</email> -->
       <email>your@email.here</email>
     </notifications>
-
     <!-- The html injected into a (x)html page if Umbraco is running in preview mode -->
-    <PreviewBadge>
-        <![CDATA[
+    <PreviewBadge><![CDATA[
             <div id="umbracoPreviewBadge" class="umbraco-preview-badge">
                 <span class="umbraco-preview-badge__header">Preview mode</span>
                 <a href="{0}/preview/?id={2}" class="umbraco-preview-badge__a open" title="Open preview in BackOffice">
@@ -171,9 +165,7 @@
                 }}
             </style>
             <script type="text/javascript" data-umbraco-path="{0}" src="{0}/js/umbraco.websitepreview.js"></script>
-        ]]>
-    </PreviewBadge>
-
+        ]]></PreviewBadge>
     <!-- How Umbraco should handle errors during macro execution. Can be one of the following values:
          - inline - show an inline error within the macro but allow the page to continue rendering. Historial Umbraco behaviour.
          - silent - Silently suppress the error and do not render the offending macro.
@@ -181,16 +173,11 @@
                     error handler is defined then you'll see the Yellow Screen Of Death (YSOD) error page.
          Note the error can also be handled by the umbraco.macro.Error event, where you can log/alarm with your own code and change the behaviour per event. -->
     <MacroErrors>throw</MacroErrors>
-
     <!-- These file types will not be allowed to be uploaded via the upload control for media and content -->
     <disallowedUploadFiles>ashx,aspx,ascx,config,cshtml,vbhtml,asmx,air,axd,swf,xml,xhtml,html,htm,php,htaccess</disallowedUploadFiles>
-
     <!-- You can specify your own background image for the login screen here. This path is relative to the ~/umbraco path. The default location is: /umbraco/assets/img/login.jpg -->
     <loginBackgroundImage>assets/img/login.jpg</loginBackgroundImage>
-
-   
   </content>
-
   <security>
     <!-- set to true to auto update login interval (and there by disabling the lock screen -->
     <keepUserLoggedIn>false</keepUserLoggedIn>
@@ -199,12 +186,10 @@
     <!-- change in 4.8: Disabled users are now showed dimmed and last in the tree. If you prefer not to display them set this to true -->
     <hideDisabledUsersInBackoffice>false</hideDisabledUsersInBackoffice>
   </security>
-
   <requestHandler>
     <!-- this ensures that all url segments are turned to ASCII as much as we can -->
     <urlReplacing toAscii="try" />
   </requestHandler>
-
   <!--
     web.routing
       @trySkipIisCustomErrors
@@ -248,7 +233,6 @@
   -->
   <web.routing trySkipIisCustomErrors="true" internalRedirectPreservesTemplate="false" disableAlternativeTemplates="false" validateAlternativeTemplates="false" disableFindContentByIdPath="false" umbracoApplicationUrl="">
   </web.routing>
-
   <!--
   keepAlive
     @disableKeepAliveTask
