use old public legacy feed

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
  <packageSources>
+    <add key="Novicell London Nuget" value="https://nuget.novicell.london/nuget" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="Novicell-Umbraco-UK" value="https://pkgs.dev.azure.com/Novicell-Umbraco-UK/_packaging/Novicell-Umbraco-UK/nuget/v3/index.json" />
+  
   </packageSources>
 </configuration>
