--- a/source/Novicell.Examine.ElasticSearch.Umbraco.TestProject/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.TestProject/packages.config
@@ -4,13 +4,15 @@
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.17.5" targetFramework="net472" />
   <package id="Examine" version="1.2.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
   <package id="ImageProcessor" version="2.9.1" targetFramework="net472" />
   <package id="ImageProcessor.Web" version="4.12.1" targetFramework="net472" />
   <package id="ImageProcessor.Web.Config" version="2.6.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net472" />
   <package id="UmbracoCms" version="8.16.0" targetFramework="net472" />
   <package id="UmbracoCms.Core" version="8.16.0" targetFramework="net472" />
   <package id="UmbracoCms.Web" version="8.16.0" targetFramework="net472" />
@@ -64,7 +66,6 @@
   <package id="Semver" version="2.0.4" targetFramework="net472" />
   <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
