--- a/source/Novicell.Examine.ElasticSearch.Umbraco/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.17.5" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net472" />
   <package id="UmbracoCms.Core" version="8.16.0" targetFramework="net472" />
   <package id="UmbracoCms.Web" version="8.16.0" targetFramework="net472" />
   <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
   <package id="Examine" version="1.2.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
   <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
@@ -62,7 +64,6 @@
   <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="Superpower" version="2.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
